<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.BooksMenuActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_library_label"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/lobster_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/books_TitleTextView"
            android:layout_marginTop="50dp"/>

    <Button
            android:text="@string/all_books_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/books_AllBooksBtn"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/books_TitleTextView"
            android:layout_marginTop="50dp"/>
    <Button
            android:text="@string/currently_reading_books_label"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/books_CurrentlyReadingBooksBtn"
            app:layout_constraintStart_toStartOf="@+id/books_AllBooksBtn"
            app:layout_constraintEnd_toEndOf="@+id/books_AllBooksBtn"
            app:layout_constraintTop_toBottomOf="@+id/books_AllBooksBtn"
            android:layout_marginTop="50dp"/>


    <Button
            android:text="@string/already_read_books_label"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/books_AlreadyReadBooksBtn"
            app:layout_constraintStart_toStartOf="@+id/books_CurrentlyReadingBooksBtn"
            app:layout_constraintEnd_toEndOf="@+id/books_CurrentlyReadingBooksBtn"
            app:layout_constraintTop_toBottomOf="@+id/books_CurrentlyReadingBooksBtn"
            android:layout_marginTop="50dp"/>

    <Button
            android:text="@string/favorite_books_label"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/books_FavoriteBooksBtn"
            app:layout_constraintStart_toStartOf="@+id/books_AlreadyReadBooksBtn"
            app:layout_constraintEnd_toEndOf="@+id/books_AlreadyReadBooksBtn"
            app:layout_constraintTop_toBottomOf="@+id/books_AlreadyReadBooksBtn"
            android:layout_marginTop="50dp"/>

    <Button
            android:text="@string/wishlist_label"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/books_WishlistBtn"
            app:layout_constraintStart_toStartOf="@+id/books_FavoriteBooksBtn"
            app:layout_constraintEnd_toEndOf="@+id/books_FavoriteBooksBtn"
            app:layout_constraintTop_toBottomOf="@+id/books_FavoriteBooksBtn"
            android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>