<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:padding="10dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_library_label"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/lobster_two"
            android:id="@+id/books_TitleTextView"
            android:layout_marginTop="100dp"/>

    <Button
            android:id="@+id/main_RegisterBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/register_btn_label"
            android:textAllCaps="false"/>

    <Button
            android:id="@+id/main_LoginBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/login_btn_label"
            android:textAllCaps="false"/>

</RelativeLayout>